; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/json/extr_jsonsax_full.c_JSON_Parser_CallEncodingDetectedHandler.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/json/extr_jsonsax_full.c_JSON_Parser_CallEncodingDetectedHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 (%struct.TYPE_5__*)* }

@JSON_Parser_Continue = common dso_local global i64 0, align 8
@JSON_Error_AbortedByHandler = common dso_local global i32 0, align 4
@JSON_Failure = common dso_local global i32 0, align 4
@JSON_Success = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*)* @JSON_Parser_CallEncodingDetectedHandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @JSON_Parser_CallEncodingDetectedHandler(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = load i64 (%struct.TYPE_5__*)*, i64 (%struct.TYPE_5__*)** %5, align 8
  %7 = icmp ne i64 (%struct.TYPE_5__*)* %6, null
  br i1 %7, label %8, label %21

8:                                                ; preds = %1
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i64 (%struct.TYPE_5__*)*, i64 (%struct.TYPE_5__*)** %10, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = call i64 %11(%struct.TYPE_5__* %12)
  %14 = load i64, i64* @JSON_Parser_Continue, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %8
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %18 = load i32, i32* @JSON_Error_AbortedByHandler, align 4
  %19 = call i32 @JSON_Parser_SetErrorAtCodepoint(%struct.TYPE_5__* %17, i32 %18)
  %20 = load i32, i32* @JSON_Failure, align 4
  store i32 %20, i32* %2, align 4
  br label %23

21:                                               ; preds = %8, %1
  %22 = load i32, i32* @JSON_Success, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %16
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @JSON_Parser_SetErrorAtCodepoint(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
